selfhost/test/typechecker/typeidentifier_error_typeargs_unexpected.out
Error at %FILE_NAME%:1:8
Incorrect number of type arguments
  |  var _: String<Int>
            ^
Expected 0, but 1 was passed
